[package]
name = "component-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
inquire = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.13"
whoami = "1.5.1"
walkdir = "2.5.0"
duct = "1.0.0"

[dev-dependencies]
tempfile = "3.10.1"
